--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
 * {
   margin: 0;
 }
+
 .header {
   background-color: #1f2937;
-  border: 3px solid;
   width: 100%;
-  height: 400px;
+  height: 300px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  padding: 24px;
 }
+
 .header-logo {
   width: 150px;
   height: 120px;
+}
+
+.header-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 56px;
+  margin-right: 48px;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #f9faf8;
 }
