--- a/style.css
+++ b/style.css
@@ -7,25 +7,27 @@
   width: 100%;
   height: 300px;
   display: flex;
+  justify-content: space-around;
   align-items: flex-start;
-  justify-content: space-evenly;
-  padding: 24px;
+  padding: 16px;
+}
+.header-logo {
+  font-size: 24px;
+  color: #f9faf8;
 }
 
-.header-logo {
-  width: 150px;
-  height: 120px;
+.header-nav {
+  display: flex;
 }
 
 .header-links {
   display: flex;
-  justify-content: space-between;
-  gap: 56px;
-  margin-right: 48px;
   list-style: none;
-}
-a {
-  text-decoration: none;
+  gap: 24px;
   font-size: 18px;
-  color: #f9faf8;
+}
+
+.header-links a {
+  text-decoration: none;
+  color: #e5e7eb;
 }
