--- a/style.css
+++ b/style.css
@@ -73,3 +73,42 @@ a {
   height: 250px;
   background-color: beige;
 }
+
+.information {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.information-title {
+  margin: 3rem 0;
+}
+
+.information-content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  margin-top: 2rem;
+}
+
+.information-content-item {
+  width: 12rem;
+  height: 13rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.information-img {
+  width: 10rem;
+  height: 10rem;
+  border: 3px solid #3a86ff;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
