--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ a {
 
 .information {
   width: 100%;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -111,4 +112,33 @@ a {
   border: 3px solid #3a86ff;
   border-radius: 10px;
   margin-bottom: 1rem;
+}
+
+.quotes {
+  width: 100%;
+  height: 40vh;
+  margin-top: 5rem;
+  background-color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quotes-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  color: #1f2937;
+  font-weight: lighter;
+}
+
+.quote-author {
+  color: #2b2d42;
 }
