--- a/style.css
+++ b/style.css
@@ -142,3 +142,38 @@ a {
 .quote-author {
   color: #2b2d42;
 }
+
+.cta {
+  width: 100%;
+  height: 35vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cta-container {
+  width: 70rem;
+  height: 8rem;
+  background-color: #3a86ff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.cta-title {
+  font-size: 18px;
+  color: #f9faf8;
+  margin-bottom: 0.5rem;
+}
+.cta-text {
+  color: #e5e7eb;
+}
+
+.cta-container-btn {
+  padding: 8px 30px;
+  border: 3px solid #e5e7eb;
+  background-color: #3a86ff;
+  border-radius: 10px;
+  color: #e5e7eb;
+}
