--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ a {
 .main-hero-img {
   width: 550px;
   height: 250px;
-  background-color: beige;
+  background-color: #2b2d42;
 }
 
 .information {
@@ -176,4 +176,18 @@ a {
   background-color: #3a86ff;
   border-radius: 10px;
   color: #e5e7eb;
+}
+
+footer {
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-text {
+  color: #f9faf8;
+  font-weight: lighter;
 }
